	  (if server is stopped/restarted you get this error)
	Black skin is getting completer
	BVN has no epg (unknown language code)
	Autoset number of digits lower if needed (default on but can be switched back to old behaviour)
	Epg info update for non C/T/S channels
	Changed key word 'FullURL' to 'IPTV'
	Finnish translation by Tomas Nybondas
	Menu time out, menu is removed 1 minute after last key press (not for MPD menu)



0.26	Fix for [undefined] in (search)timer menu when there are no (search)timers on server
	Changed Plugin check, only check if digit 1,2,3 from server ip & box ip are the same.
	Updated epgfilter for CDS on 19.2E, Brava HDTV on 23.2E
	Added parameter to bash script, if set script uses 'svdrpsend.pl', if not 'svdrpsend'
	Fixed show ext epg info if ext info != short info.
	Moved script to main.js
	Display shows R/F + channelnumber ('R' for Radio, 'F' for favorite)
	Skinning, CSS styling (<menu> <1> <blue> changes skin, restart script needed)
	In osd timeleft can't be more 24h (Gives a long number when box has no internet or time is totally wrong)
	Timed change, set to 0 for old behavior (press ok for change)
	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
	add to favorite now refreshes view
	Updated remote keys in settings file.
	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
	NYX remote hase no stopkey so key 'back' does the same as stop.
	Fixed Standby while playback.
	(For Easyvdr & SmartWebTV plugin) Menu + red send Server Power Down. (Define it in vdr's 'commands.conf')
	Added global multicast setting, removed testing3 (multicasting test)
	Added config/custom.js, override global settings, define local settings (setting file isn't included in the download/distro)
	Added config/<macaddress>.js settings for a single box, read after all other settings.