@@ -8,6 +8,7 @@
 <script type="text/javascript" src="javascript/main.js"></script>
 <script type="text/javascript" src="javascript/weather.js"></script>
 <script type="text/javascript" src="javascript/news.js"></script>
+<script type="text/javascript"> /* src="javascript/dlna.js" */ </script>
 <script type="text/javascript">
 
 /***********************************************************/
