@@ -25,7 +25,9 @@ VDR 1.7.29+
 	Epg info update for non C/T/S channels
 	Changed key word 'FullURL' to 'IPTV'
 	Finnish translation by Tomas Nybondas
-	Menu time out, menu is removed 1 minute after last key press (not for MPD menu)
+	Menu time out, menu is removed 1 minute after last key press (not for MPD menu or recordings)
+	(un)Mute external speakers with << or >> within menu (was experimental and settings menu only)
+
 
 
 
